--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.20",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.13.5",
+    "dotenv": "^17.3.1",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
@@ -37,6 +40,7 @@
     "react-dom": "19.1.0",
     "react-i18next": "^16.5.4",
     "react-native": "0.81.5",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-localize": "^3.6.1",
     "react-native-reanimated": "~4.1.1",
